--- a/client/templates/admin/events/add_event.html
+++ b/client/templates/admin/events/add_event.html
@@ -1,4 +1,4 @@
-<template name="add_project">
+<template name="add_event">
     <script type="text/javascript" src="selectize.js"></script>
     <link rel="stylesheet" type="text/css" href="selectize.css" media="screen" title="no title" charset="utf-8">
 
@@ -6,7 +6,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Create Appointment</h2>
-                <form class="add_project_form" enctype="multipart/form-data">
+                <form class="add_event_form" enctype="multipart/form-data">
                     <div class="form-group">
                         <label>Name</label>
                         <input type="text" class="form-control" id="name" name="name" placeholder="Event Title">
@@ -37,19 +37,19 @@
                     </div>
                     <div class="form-group">
                         <label>Type</label>
-                        <input type="text" class="form-control" id="type" name="type" placeholder="Project Type">
+                        <input type="text" class="form-control" id="type" name="type" placeholder="Event Type">
                     </div>
                     <div class="form-group">
                         <label>Description</label>
                         <textarea class="form-control" id="description" name="description" placeholder="Description"></textarea>
                     </div>
                     <div class="form-group">
-                        <label>Project Image</label>
-                        <input type="file" name="projectImage" id="projectImage">
+                        <label>Event Image</label>
+                        <input type="file" name="eventImage" id="eventImage">
                     </div>
 
                     <button type="submit" class="btn btn-primary">Submit</button>
-                    <a href="/admin/projects" class="btn btn-default">Go Back</a>
+                    <a href="/admin/events" class="btn btn-default">Go Back</a>
                 </form>
             </div>
         </div>
