Edit Delete and others are functioning

--- a/client/templates/admin/events/edit_event.html
+++ b/client/templates/admin/events/edit_event.html
@@ -2,7 +2,7 @@
     <div class="container pt">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Edit event</h2> <small>{{name}}</small>
+                <h2>Edit event - <small>{{name}}</small></h2> 
                 <form class="edit_event_form" enctype="multipart/form-data">
                     <div class="form-group">
                         <label>Name</label>
@@ -20,7 +20,9 @@
 
                     <div class="form-group">
                         <label>Client</label>
-                        <input type="text" class="form-control" id="client" name="client" placeholder="Client Name" value="{{client}}">
+                        {{#with getClient}}
+                          <input type="text" class="form-control" id="client" name="client" placeholder="Client Name" value="{{name}}" disabled>
+                        {{/with}}
                     </div>
                     <div class="form-group">
                         <label>Type</label>
@@ -29,12 +31,6 @@
                     <div class="form-group">
                         <label>Description</label>
                         <textarea class="form-control" id="description" name="description" placeholder="Description">{{description}}</textarea>
-                    </div>
-                    <div class="form-group">
-                        <label>event Image</label>
-                        <input type="file" name="eventImage" id="eventImage">
-
-                        Current Image: <img class="edit-image" src="{{eventImages}}">
                     </div>
 
                     <button type="submit" class="btn btn-primary">Submit</button>
