--- a/client/templates/admin/events/list_events.html
+++ b/client/templates/admin/events/list_events.html
@@ -2,39 +2,44 @@
     <div class="container pt">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Today's Events</h2>
-               <a href="/admin/events/add" class="btn btn-primary btn-tiny">Create an Event</a>
+                <h2>Today's Appointments</h2>
+               <a href="/admin/events/add" class="btn btn-default btn-tiny pull-right footer-icons">
+                 <i class="glyphicon glyphicon-plus"></i>
+                 Create One
+               </a>
                 <br><br>
-                <table class="table table-striped">
-                    <tr>
-                        <th>Event Name</th>
-                        <th>Date</th>
-                        <th>Client Name</th>
-
-                        <th>Type</th>
-                        <th></th>
-                    </tr>
-                    {{#each getEvents}}
-                        <tr>
-                            <td>{{name}}</td>
-                            <td>{{eventDate}}</td>
-                            {{#with getClient}}
-														  <td>{{name}}</td>
-                            {{/with}}
-
-                            <td>{{type}}</td>
-                            <td><a href="/admin/events/{{_id}}/edit" class="btn btn-default btn-tiny">Edit</a> <button class="btn btn-default delete_event">Delete</button></td>
-                        </tr>
-                    {{else}}
-                        <tr>
-                            <td>There are no events</td>
-                        </tr>
-                    {{/each}}
-                </table>
             </div>
 
+            <div class="col-lg-8 col-lg-offset-2">
+                {{#each getEvents}}
+              <div class="panel panel-default">
+                  <div class="panel-heading">
+                    <h3 class="panel-title">{{name}}</h3>
+                  </div>
+                  <div class="panel-body">
+                    {{type}}
+
+                    <p class="pull-right">{{eventDate}}</p>
+                    {{#with getClient}}
+                      <p>{{name}}</p>
+                    {{/with}}
+
+                  </div>
+                  <div class="panel-footer">
+                      <a href="/admin/events/{{_id}}/edit" class="btn btn-default btn-tiny footer-icons">
+                          <i class="glyphicon glyphicon-pencil"></i>
+                        Edit Appointment
+                      </a>
+                      <a href="#" class="btn btn-default btn-tiny delete_event footer-icons">
+                          <i class="glyphicon glyphicon-remove"></i>
+                        Cancel Appointment
+                      </a>
+                </div>
+            </div>
+                {{/each}}
+
+            </div>
         </div>
-        <!-- /row -->
     </div>
-    <!-- /container -->
+
 </template>
