--- a/client/templates/admin/clients/edit_client.html
+++ b/client/templates/admin/clients/edit_client.html
@@ -2,24 +2,19 @@
     <div class="container pt">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Edit client</h2> <small>{{name}}</small>
+                <h2>Edit client <small>({{name}})</small> </h2>
                 <form class="edit_client_form" enctype="multipart/form-data">
-                    <div class="form-group">
-                        <label>Name</label>
-                        <input type="text" class="form-control" id="name" name="name" placeholder="client Name" value="{{name}}">
-                    </div>
-
                     <div class="form-group">
                         <label>Name</label>
                         <input type="text" class="form-control" id="client" name="client" placeholder="Client Name" value="{{name}}">
                     </div>
                     <div class="form-group">
                         <label>Email</label>
-                        <input type="text" class="form-control" id="type" name="type" placeholder="client Type" value="{{email}}">
+                        <input type="text" class="form-control" id="email" name="email" placeholder="Email" value="{{email}}">
                     </div>
                     <div class="form-group">
                         <label>Phone</label>
-                        <textarea class="form-control" id="description" name="description" placeholder="Description">{{phone}}</textarea>
+                        <input type="text" class="form-control" id="phone" name="phone" placeholder="Phone Number" value="{{phone}}">
                     </div>
 
 
