--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -1,23 +1,8 @@
 <template name="home">
   <!-- +++++ Welcome Section +++++ -->
 	<div id="ww">
-	    <div class="container">
-			<div class="row">
-				<div class="col-lg-3 col-lg-offset-2 centered">
-					<img src="assets/img/user.png" alt="Dentist1">
-					<h1>Hi, I am Rashmi!</h1>
-					<p>Hello everybody. I'm Rashmi, a dentist to take you through a safe journey.</p>
-					<p>Please, consider to register to <a href="http://eepurl.com/IcgkX">our newsletter</a> to be updated with our latest themes and freebies. Like always, you can use this theme in any project freely. Share it with your friends.</p>
-
-				</div><!-- /col-lg-8 -->
-        <div class="col-lg-3 col-lg-offset-2 centered">
-					<img src="assets/img/user.png" alt="Dentist2">
-					<h1>Hi, I am Shweta!</h1>
-					<p>Hello everybody. I'm Rashmi, a dentist to take you through a safe journey.</p>
-					<p>Please, consider to register to <a href="http://eepurl.com/IcgkX">our newsletter</a> to be updated with our latest themes and freebies. Like always, you can use this theme in any project freely. Share it with your friends.</p>
-
-				</div><!-- /col-lg-8 -->
-			</div><!-- /row -->
-	    </div> <!-- /container -->
+	<img src="assets/img/homepage.jpg" alt="homepage">
+		    <div class="container">
+		         </div> <!-- /container -->
 	</div><!-- /ww -->
 </template>
