--- a/client/templates/about.html
+++ b/client/templates/about.html
@@ -4,14 +4,29 @@
     <div class="container">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 centered">
-        <img src="assets/img/user.png" alt="Stanley">
-        <h1>About Stanley!</h1>
+        <h1>About DentaCare</h1>
         <p>Hello everybody. I'm Stanley, a free handsome bootstrap theme coded by BlackTie.co. A really simple theme for those wanting to showcase their work with a cute & clean style.</p>
         <p>Please, consider to register to <a href="http://eepurl.com/IcgkX">our newsletter</a> to be updated with our latest themes and freebies. Like always, you can use this theme in any project freely. Share it with your friends.</p>
 
       </div><!-- /col-lg-8 -->
     </div><!-- /row -->
-    </div> <!-- /container -->
+<div class="row">
+        <div class="col-lg-3 col-lg-offset-2 centered">
+          <img src="assets/img/Rashmi.png" alt="Dentist1">
+          <h1>Hi, I am Rashmi!</h1>
+          <p>Hello everybody. I'm Rashmi, a dentist to take you through a safe journey.</p>
+          <p>Please, consider to register to <a href="http://eepurl.com/IcgkX">our newsletter</a> to be updated with our latest themes and freebies. Like always, you can use this theme in any project freely. Share it with your friends.</p>
+
+        </div><!-- /col-lg-8 -->
+        <div class="col-lg-3 col-lg-offset-2 centered">
+          <img src="assets/img/Ashika.png" alt="Dentist2">
+          <h1>Hi, I am Ashika!</h1>
+          <p>Hello everybody. I'm Rashmi, a dentist to take you through a safe journey.</p>
+          <p>Please, consider to register to <a href="http://eepurl.com/IcgkX">our newsletter</a> to be updated with our latest themes and freebies. Like always, you can use this theme in any project freely. Share it with your friends.</p>
+
+        </div><!-- /col-lg-8 -->
+      </div><!-- /row -->
+        </div> <!-- /container -->
 </div><!-- /ww -->
 
 
