--- a/client/templates/work.html
+++ b/client/templates/work.html
@@ -12,39 +12,35 @@
 		</div>
 		<div class="row mt centered">
 			<div class="col-lg-3">
-				<a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/port01.jpg" alt="" /></a>
-				<p>APE</p>
+				<a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/dentacare_logo.jpg" alt="" /></a>
+				<p>Endodontic</p>
 			</div>
 			<div class="col-lg-3">
-				<a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/port02.jpg" alt="" /></a>
-				<p>RAIDERS</p>
+				<a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/dentacare_logo.jpg" alt="" /></a>
+				<p>Cosmetic</p>
 			</div>
 			<div class="col-lg-3">
-				<a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/port03.jpg" alt="" /></a>
-				<p>VIKINGS</p>
+				<a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/dentacare_logo.jpg" alt="" /></a>
+				<p>Geriatric</p>
 			</div>
       <div class="col-lg-3">
-				<a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/port04.jpg" alt="" /></a>
-				<p>YODA</p>
+				<a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/dentacare_logo.jpg" alt="" /></a>
+				<p>Implant</p>
 			</div>
 		</div><!-- /row -->
 		<div class="row mt centered">
 			<div class="col-lg-3">
-				<a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/port04.jpg" alt="" /></a>
-				<p>YODA</p>
+				<a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/dentacare_logo.jpg" alt="" /></a>
+				<p>Oral Surgery</p>
 			</div>
 			<div class="col-lg-3">
-				<a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/port05.jpg" alt="" /></a>
-				<p>EMPERORS</p>
+				<a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/dentacare_logo.jpg" alt="" /></a>
+				<p>Pediatrics</p>
 			</div>
 			<div class="col-lg-3">
-				<a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/port06.jpg" alt="" /></a>
-				<p>CHIEFS</p>
+				<a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/dentacare_logo.jpg" alt="" /></a>
+				<p>Periodontics</p>
 			</div>
-      <div class="col-lg-3">
-				<a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/port04.jpg" alt="" /></a>
-				<p>YODA</p>
-			</div>
-		</div><!-- /row -->
+    </div><!-- /row -->
 	</div><!-- /container -->
 </template>
