Date in appointment has been formatted to India, would need to extend it later by locale

--- a/client/templates/admin/events/list_events.html
+++ b/client/templates/admin/events/list_events.html
@@ -19,7 +19,7 @@
                   <div class="panel-body">
                     {{type}}
 
-                    <p class="pull-right">{{eventDate}}</p>
+                    <p class="pull-right">{{formatDateTime eventDate}}</p>
                     {{#with getClient}}
                       <p>{{name}}</p>
                     {{/with}}
