--- a/client/templates/footer.html
+++ b/client/templates/footer.html
@@ -11,11 +11,11 @@
         </p>
       </div><!-- /col-lg-4 -->
 
-      <div class="col-lg-4">
+      <!--<div class="col-lg-4">
 
-      </div><!-- /col-lg-4 -->
+      </div> /col-lg-4 -->
 
-      <div class="col-lg-4">
+      <div class="col-lg-4 clearfix">
         <h4>P21</h4>
         <p>Driving Value. Phase 2 before Phase 1.</p>
       </div><!-- /col-lg-4 -->
