--- a/client/templates/admin/events/edit_event.html
+++ b/client/templates/admin/events/edit_event.html
@@ -11,7 +11,7 @@
                    <div class="form-group">
                      <label>Date and Time</label>
                      <div class='input-group datetimepicker' id='datetimepicker'>
-                         <input type='text' class="set-due-date form-control" value="{{eventDate}}" />
+                         <input type='text' class="set-due-date form-control" value="{{eventDate}}" id="eventDate" />
                          <span class="input-group-addon">
                            <i class="glyphicon glyphicon-calendar"></i>
                          </span>
