--- a/client/templates/admin/clients/add_client.html
+++ b/client/templates/admin/clients/add_client.html
@@ -1,29 +1,25 @@
 <template name="add_client">
+  {{#autoForm collection="Clients" id="add_client_form" type="insert"}}
     <div class="container pt">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
+            <div class="col-lg-6 col-lg-offset-2">
                 <h2>Add a Client</h2>
-                <form class="add_client_form" enctype="multipart/form-data">
                     <div class="form-group">
-                        <label>Name</label>
-                        <input type="text" class="form-control" id="name" name="name" placeholder="Full Name">
+                        {{>afQuickField name='name'}}
                     </div>
 
                     <div class="form-group">
-                        <label>Email</label>
-                        <input type="email" class="form-control" id="email" name="email" placeholder="Email Id">
+                        {{>afQuickField name='email'}}
                     </div>
                     <div class="form-group">
-                        <label>Phone</label>
-                        <input type="text" class="form-control" id="phone" name="phone" placeholder="Phone Number">
+                        {{>afQuickField name='phone'}}
                     </div>
-
                     <button type="submit" class="btn btn-primary">Submit</button>
                     <a href="/admin/clients" class="btn btn-default">Go Back</a>
-                </form>
+
             </div>
         </div>
-        <!-- /row -->
+
     </div>
-    <!-- /container -->
+    {{/autoForm}}
 </template>
