--- a/client/templates/admin/clients/list_clients.html
+++ b/client/templates/admin/clients/list_clients.html
@@ -3,33 +3,41 @@
       <div class="row">
           <div class="col-lg-8 col-lg-offset-2">
               <h2>Your Clients</h2>
-             <a href="/admin/clients/add" class="btn btn-primary btn-tiny">Add a Client</a>
+             <a href="/admin/clients/add" class="btn btn-default btn-tiny pull-right footer-icons">
+               <i class="glyphicon glyphicon-plus"></i> Add a Client</a>
               <br><br>
-              <table class="table table-striped">
-                  <tr>
-                      <th>Client Name</th>
-                      <th>Email Id</th>
-                      <th>Phone</th>
-                      <th></th>
-                  </tr>
-                  {{#each clients}}
-                      <tr>
-                          <td>{{name}}</td>
-                          <td>{{email}}</td>
-                          <td>{{phone}}</td>
-                          <td></td>
-                          <td><a href="/admin/clients/{{_id}}/edit" class="btn btn-default btn-tiny">Edit</a> <button class="btn btn-default delete_client">Delete</button></td>
-                      </tr>
-                  {{else}}
-                      <tr>
-                          <td>There are no clients</td>
-                      </tr>
-                  {{/each}}
-              </table>
           </div>
 
       </div>
       <!-- /row -->
   </div>
   <!-- /container -->
+
+  <div class="container pt">
+    <div class="row">
+
+      <!--<div class="col-lg-8 col-lg-offset-2"> -->
+        {{#each clients}}
+        <div class="col-lg-8 col-lg-offset-2">
+
+        <div class="panel panel-default client-card">
+          <div class="panel-heading">
+            <h3 class="panel-title client-card-header">{{name}}</h3>
+          </div>
+          <div class="panel-body">
+            <p class="pull-right">
+              {{phone}}
+            </p>
+            {{email}}
+          </div>
+          <div class="panel-footer">
+            Panel footer
+          </div>
+        </div>
+
+      </div>
+      {{/each}}
+    </div>
+  </div>
+
 </template>
