Started Search functionality

--- a/client/stylesheets/codefolio.css
+++ b/client/stylesheets/codefolio.css
@@ -249,7 +249,7 @@ bt {
     float: left;
     margin: 0 10px;
 }
-
+/*Custom CSS for Roopkund */
 .panel-detail {
   float: right;
   margin-right: 10px;
@@ -261,8 +261,18 @@ bt {
 
 .client-card{
   border-color: #1abc9c;
+  color:#3E3d35;
 }
 
 .client-card-header{
   color: #3E3d35;
+}
+
+input[type="text"]{
+  color:#3E3d35;
+}
+input[type="text"]:focus{
+  border-color:#1abc9c;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(26, 188, 156, 1);
+  outline: 0 none;
 }
