--- a/client/templates/admin/clients/add_client.html
+++ b/client/templates/admin/clients/add_client.html
@@ -2,7 +2,7 @@
   {{#autoForm collection="Clients" id="add_client_form" type="insert"}}
     <div class="container pt">
         <div class="row">
-            <div class="col-lg-6 col-lg-offset-2">
+            <div class="col-lg-6 col-md-6 col-sm-4 col-lg-offset-2">
                 <h2>Add a Client</h2>
                     <div class="form-group">
                         {{>afQuickField name='name'}}
