--- a/client/templates/admin/clients/edit_client.html
+++ b/client/templates/admin/clients/edit_client.html
@@ -2,7 +2,7 @@
   {{#autoForm collection="Clients" id="edit_client_form" type="update" doc=selectedClient}}
     <div class="container pt">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
+            <div class="col-lg-6 col-md-6 col-sm-4 col-lg-offset-2">
                 <h2>Edit client <small>({{name}})</small> </h2>
                     <div class="form-group">
                         {{>afQuickField name='name'}}
