--- a/client/templates/admin/events/add_event.html
+++ b/client/templates/admin/events/add_event.html
@@ -4,7 +4,7 @@
 
     <div class="container pt">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
+            <div class="col-lg-6 col-md-6 col-sm-4 col-lg-offset-2">
                 <h2>Create Appointment</h2>
                 <form class="add_event_form" enctype="multipart/form-data">
                     <div class="form-group">
