--- a/client/templates/admin/events/list_events.html
+++ b/client/templates/admin/events/list_events.html
@@ -1,7 +1,7 @@
 <template name="list_events">
     <div class="container pt">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
+            <div class="col-lg-12 col-md-12 col-sm-12">
                 <h2>Today's Appointments</h2>
                <a href="/admin/events/add" class="btn btn-default btn-tiny pull-right footer-icons">
                  <i class="glyphicon glyphicon-plus"></i>
@@ -10,7 +10,7 @@
                 <br><br>
             </div>
 
-            <div class="col-lg-8 col-lg-offset-2">
+            <div class="col-lg-12 col-md-10 col-sm-4">
                 {{#each getEvents}}
               <div class="panel panel-default">
                   <div class="panel-heading">
