Search second push

--- a/client/templates/admin/clients/list_clients.html
+++ b/client/templates/admin/clients/list_clients.html
@@ -4,10 +4,12 @@
     <div class="row">
       <div class="col-lg-12 col-md-12 col-sm-12">
         <div class="input-group">
-          <input type="text" name="search" value="" placeholder="Search for..." class="form-control">
+
+          <input type="text" name="search" id="search" placeholder="Search for..." class="form-control">
           <span class="input-group-btn">
             <button type="button" name="search_button" id="search_button" class="btn btn-default">Search</button>
           </span>
+
         </div>
       </div>
     </div>
