--- a/client/templates/admin/clients/list_clients.html
+++ b/client/templates/admin/clients/list_clients.html
@@ -4,12 +4,10 @@
     <div class="row">
       <div class="col-lg-12 col-md-12 col-sm-12">
         <div class="input-group">
-
-          <input type="text" name="search" id="search" placeholder="Search for..." class="form-control">
+          {{> esInput index="clients" placeholder="Search Clients..." class="form-control search_text" event="enter" allDocsOnEmpty=true}}
           <span class="input-group-btn">
             <button type="button" name="search_button" id="search_button" class="btn btn-default">Search</button>
           </span>
-
         </div>
       </div>
     </div>
@@ -20,7 +18,6 @@
                <i class="glyphicon glyphicon-plus"></i> Add a Client</a>
               <br><br>
           </div>
-
       </div>
       <!-- /row -->
   </div>
@@ -28,8 +25,7 @@
 
   <div class="container pt">
     <div class="row">
-      <!--<div class="col-lg-8 col-lg-offset-2"> -->
-        {{#each clients}}
+        {{#esEach index="clients"}}
         <div class="col-lg-4 col-md-4 col-sm-12">
         <a href="/admin/clients/{{_id}}/edit" class="card-hover">
           <div class="panel panel-default client-card">
@@ -48,8 +44,21 @@
           </div>
       </a>
       </div>
-      {{/each}}
+      {{/esEach}}
+
+
     </div>
+    <div class="search-controls">
+      {{> esLoadMoreButton index="clients" howMany=20}}
+    </div>
+
+    {{#ifEsHasNoResults index="clients"}}
+      <div class="no-results">No results found!</div>
+    {{/ifEsHasNoResults}}
+
+    {{#ifEsIsSearching index="clients"}}
+      <div>Loading...</div>
+    {{/ifEsIsSearching}}
   </div>
 
 </template>
