--- a/client/templates/admin/events/list_events.html
+++ b/client/templates/admin/events/list_events.html
@@ -1,5 +1,15 @@
 <template name="list_events">
     <div class="container pt">
+      <!-- <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12">
+          <div class="input-group">
+            {{> esInput index="events" placeholder="Search Appointments..." class="form-control search_text" event="enter" allDocsOnEmpty=true}}
+            <span class="input-group-btn">
+              <button type="button" name="search_button" id="search_button" class="btn btn-default">Search</button>
+            </span>
+          </div>
+        </div>
+      </div> -->
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12">
                 <h2>Today's Appointments</h2>
@@ -9,9 +19,13 @@
                </a>
                 <br><br>
             </div>
-
+      </div>
+    </div>
+      <div class="container pt">
+        <div class="row">
+              {{#each getEvents}}
             <div class="col-lg-12 col-md-10 col-sm-4">
-                {{#each getEvents}}
+
               <div class="panel panel-default">
                   <div class="panel-heading">
                     <h3 class="panel-title">{{name}}</h3>
@@ -36,10 +50,23 @@
                       </a>
                 </div>
             </div>
-                {{/each}}
+
 
             </div>
-        </div>
-    </div>
+            {{/each}}
+          </div>
 
+          <!-- <div class="search-controls">
+            {{> esLoadMoreButton index="events" howMany=20}}
+          </div>
+
+          {{#ifEsHasNoResults index="events"}}
+            <div class="no-results">No results found!</div>
+          {{/ifEsHasNoResults}}
+
+          {{#ifEsIsSearching index="events"}}
+            <div>Loading...</div>
+          {{/ifEsIsSearching}}
+        </div> -->
+      </div>
 </template>
