--- a/client/templates/footer.html
+++ b/client/templates/footer.html
@@ -1,27 +1,16 @@
 <template name="footer">
-  <div id="footer">
+  <footer class="footer">
   <div class="container">
     <div class="row">
-      <div class="col-lg-4">
-        <h4>Our Clinic</h4>
-        <p>
-          Some Address 987,<br/>
-          +91 9054 5455, <br/>
-          Bangalore, India.
+      <div class="col-lg-12 col-md-12 col-sm-12">
+        <p>Our Clinic
+          <br/>
+          Some Address 987,
+          +91 9054 5455, Bangalore, India.
         </p>
       </div><!-- /col-lg-4 -->
-
-      <!--<div class="col-lg-4">
-
-      </div> /col-lg-4 -->
-
-      <div class="col-lg-4 clearfix">
-        <h4>P21</h4>
-        <p>Driving Value. Phase 2 before Phase 1.</p>
-      </div><!-- /col-lg-4 -->
-
     </div>
 
   </div>
-</div>
+</footer>
 </template>
