--- a/client/templates/admin/clients/list_clients.html
+++ b/client/templates/admin/clients/list_clients.html
@@ -6,7 +6,7 @@
         <div class="input-group">
           {{> esInput index="clients" placeholder="Search Clients..." class="form-control search_text" event="enter" allDocsOnEmpty=true}}
           <span class="input-group-btn">
-            <button type="button" name="search_button" id="search_button" class="btn btn-default">Search</button>
+            <button type="button" name="search_button" id="search_button" class="btn btn-default search_glow">Search</button>
           </span>
         </div>
       </div>
