--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -1,8 +1,13 @@
 <template name="home">
-  <!-- +++++ Welcome Section +++++ -->
-	<div id="ww">
-	<img src="assets/img/homepage.jpg" alt="homepage">
-		    <div class="container">
-		         </div> <!-- /container -->
-	</div><!-- /ww -->
+
+  <div class="container">
+	 	<div class="row">
+			<div id="owl-carousel" class="owl-carousel">
+			  <div class="item"> <img src="assets/img/kids.png"></div>
+			  <div class="item"> <img src="assets/img/old.png"></div>
+			  <div class="item"> <img src="assets/img/experts.jpg"></div>
+			</div>
+		</div>
+	</div>
+
 </template>
