Clean  up ver2 Carousel

--- a/client/stylesheets/codefolio.css
+++ b/client/stylesheets/codefolio.css
@@ -284,6 +284,7 @@ input[type="text"]:focus,search_glow{
   display: block;
   width: 100%;
   height: auto;
+}
 
 .footer {
 	background-color: #2f2f2f;
