Action button fixes for mobile change

--- a/client/templates/admin/clients/list_clients.html
+++ b/client/templates/admin/clients/list_clients.html
@@ -15,7 +15,8 @@
           <div class="col-lg-12 col-md-12 col-sm-12">
               <h3>Your Clients</h3>
              <a href="/admin/clients/add" class="btn btn-default btn-tiny footer-icons pull-right">
-               <i class="glyphicon glyphicon-plus"></i> Add a Client</a>
+               <i class="glyphicon glyphicon-plus"></i>
+               <span class="hidden-xs">Add a Client</span></a>
               <br><br>
           </div>
       </div>
