--- a/client/templates/admin/events/list_events.html
+++ b/client/templates/admin/events/list_events.html
@@ -10,13 +10,13 @@
           </div>
         </div>
       </div> -->
-      
+
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12">
                 <h2>Today's Appointments</h2>
                <a href="/admin/events/add" class="btn btn-default btn-tiny pull-right footer-icons">
                  <i class="glyphicon glyphicon-plus"></i>
-                 Create One
+                 <span class="hidden-xs">Create One</span>
                </a>
                 <br><br>
             </div>
@@ -44,11 +44,11 @@
                   <div class="panel-footer">
                       <a href="/admin/events/{{_id}}/edit" class="btn btn-default btn-tiny footer-icons">
                           <i class="glyphicon glyphicon-pencil"></i>
-                        Edit Appointment
+                        <span class="hidden-xs">Edit Appointment</span>
                       </a>
                       <a href="#" class="btn btn-default btn-tiny delete_event footer-icons">
                           <i class="glyphicon glyphicon-remove"></i>
-                        Cancel Appointment
+                        <span class="hidden-xs">Cancel Appointment</span>
                       </a>
                 </div>
             </div>
