--- a/client/templates/head.html
+++ b/client/templates/head.html
@@ -1,5 +1,5 @@
 <head>
   <meta charset="utf-8">
   <title>Rashmi's Dental Clinic</title>
-  <meta name="viewport" content="user-scalable=no,initial-scale=1,minimal-ui,maximum-scale=1,minimum-scale=1">
+  <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
 </head>
