--- a/client/templates/admin/clients/list_clients.html
+++ b/client/templates/admin/clients/list_clients.html
@@ -53,7 +53,7 @@
                     <span class="hidden-xs hidden-sm hidden-md small">Attach</span>
                   </a>
 
-                  <a href="{{phone}}" id="add_event"
+                  <a href="tel:{{phone}}" id="external_call"
                   class="btn btn-default btn-tiny footer-icons pull-right">
                     <i class="glyphicon glyphicon-earphone"></i>
                     <span class="hidden-xs hidden-sm hidden-md small">Call</span>
