--- a/client/templates/navbar.html
+++ b/client/templates/navbar.html
@@ -11,7 +11,7 @@
       </button>
       </div>
 
-    <div class="navbar-collapse collapse">
+    <div class="navbar-collapse collapse navbar-responsive-collapse">
     <ul class="nav navbar-nav navbar-left">
     <li><img src="assets/img/dentacare_logo.jpg" height=50px width=50px alt="homepage"></li>
     <li><a href= "{{pathFor 'home'}}">Dentacare</a></li>
