--- a/client/templates/admin/events/list_events.html
+++ b/client/templates/admin/events/list_events.html
@@ -1,4 +1,5 @@
 <template name="list_events">
+
     <div class="container pt">
       <!-- <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12">
@@ -14,6 +15,26 @@
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12">
                 <h2>Today's Appointments</h2>
+                <!-- Make the datepicker here -->
+                <div class="col-sm-4">
+                  <div class="date-picker"  data-date={{getToday}} data-keyboard="false">
+                     <div class="date-container pull-left">
+                         <h4 class="weekday">{{getWeekday}}</h4>
+                         <h2 class="date">{{getMonth}}-{{getDay}}</h2>
+                         <h4 class="year pull-right">((getYear))</h4>
+                     </div>
+                     <span data-toggle="datepicker" data-type="subtract" class="fa fa-angle-left"></span>
+                     <span data-toggle="datepicker" data-type="add" class="fa fa-angle-right"></span>
+                     <div class="input-group input-datepicker">
+                         <input type="text" class="form-control" data-format="YYYY/MM/DD" placeholder="YYYY/MM/DD">
+                         <span class="input-group-btn">
+                             <button class="btn btn-default" type="button">Go!</button>
+                         </span>
+                     </div>
+                     <span data-toggle="calendar" class="fa fa-calendar"></span>
+               </div>
+                </div> <!--Date picker ends here -->
+
                <a href="/admin/events/add" class="btn btn-default btn-tiny pull-right footer-icons">
                  <i class="glyphicon glyphicon-plus"></i>
                  <span class="hidden-xs">Create One</span>
