--- a/client/templates/admin/events/list_events.html
+++ b/client/templates/admin/events/list_events.html
@@ -14,35 +14,25 @@
 
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12">
-                <h2>Today's Appointments</h2>
                 <!-- Make the datepicker here -->
-                <div class="col-sm-4">
-                  <div class="date-picker"  data-date={{getToday}} data-keyboard="false">
-                     <div class="date-container pull-left">
-                         <h4 class="weekday">{{getWeekday}}</h4>
-                         <h2 class="date">{{getMonth}}-{{getDay}}</h2>
-                         <h4 class="year pull-right">((getYear))</h4>
-                     </div>
-                     <span data-toggle="datepicker" data-type="subtract" class="fa fa-angle-left"></span>
-                     <span data-toggle="datepicker" data-type="add" class="fa fa-angle-right"></span>
-                     <div class="input-group input-datepicker">
-                         <input type="text" class="form-control" data-format="YYYY/MM/DD" placeholder="YYYY/MM/DD">
-                         <span class="input-group-btn">
-                             <button class="btn btn-default" type="button">Go!</button>
-                         </span>
-                     </div>
-                     <span data-toggle="calendar" class="fa fa-calendar"></span>
-               </div>
-                </div> <!--Date picker ends here -->
-
-               <a href="/admin/events/add" class="btn btn-default btn-tiny pull-right footer-icons">
-                 <i class="glyphicon glyphicon-plus"></i>
-                 <span class="hidden-xs">Create One</span>
-               </a>
-                <br><br>
-            </div>
+                <div class="col-lg-6 col-md-6 col-sm-12 pull-left">
+                  <h3>Appointments for </h3>
+                  <i id="subtract" class="glyphicon glyphicon-menu-left"></i>
+                  <span id="chosenDate" class="chosenDate" ></span>
+                  <i id="add" class="glyphicon glyphicon-menu-right"></i>
+                  <i id="calendar" class="glyphicon glyphicon-calendar"></i>
+                </div>
+              <br/><br/>
+              <div class="col-lg-6 col-md-6 col-sm-12 pull-right create-one">
+                 <a href="/admin/events/add" class="btn btn-default btn-tiny footer-icons pull-right">
+                   <i class="glyphicon glyphicon-plus"></i>
+                   <span class="hidden-xs">Create One</span>
+                 </a>
+                  <br><br>
+              </div>
          </div>
       </div>
+    </div>
       <div class="container pt">
         <div class="row">
               {{#each getEvents}}
