--- a/client/templates/footer.html
+++ b/client/templates/footer.html
@@ -1,5 +1,5 @@
 <template name="footer">
-  <footer class="footer">
+  <footer class="footer hidden-xs hidden-sm">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 col-md-12 col-sm-12">
